--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,11 @@
-flask==2.3.2
+bottle==0.12.25
+bottle-websocket==0.2.9
+Eel==0.16.0
+future==0.18.3
+gevent==23.9.1
+gevent-websocket==0.10.1
+greenlet==3.0.3
+pyparsing==3.1.1
+whichcraft==0.6.1
+zope.event==5.0
+zope.interface==6.1
